vlib/v/checker/tests/cast_to_ref_struct_err.vv
module main

pub struct SomeError {
mut:
	msg string
}

fn main() {
	a := unsafe { &SomeError('yo') }
	println(a)
}
